Trying again but with the mqtt dependency added

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -43,3 +43,4 @@ updates:
       - dependency-name: "await-spawn"
       # custom for this project
       - dependency-name: "playactor"
+      - dependency-name: "mqtt"
