--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "body-parser": "^1.20.1",
     "express": "^4.18.2",
     "express-prom-bundle": "^6.5.0",
+    "mqtt": "^5.10.1",
     "playactor": "^0.4.1",
     "prom-client": "^14.1.0"
   },
