And now I'm getting close to something useful

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,9 @@ services:
       - 4242:4242
     environment:
       - CHOKIDAR_USEPOLLING=true
+      - MQTT_BROKER_URL=${MQTT_BROKER_URL}
+      - MQTT_USERNAME=${MQTT_USERNAME}
+      - MQTT_PASSWORD=${MQTT_PASSWORD}
     volumes:
       - ./credentials.json:$HOME/.config/playactor/credentials.json
     stdin_open: true
