--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -41,6 +41,10 @@ updates:
     allow:
       # added for async handling
       - dependency-name: "await-spawn"
-      # custom for this project
-      - dependency-name: "playactor"
+      - dependency-name: "body-parser"
+      - dependency-name: "express"
+      - dependency-name: "express-prom-bundle"
+      - dependency-name: "fs-store"
       - dependency-name: "mqtt"
+      - dependency-name: "playactor"
+      - dependency-name: "prom-client"
