--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,5 +19,5 @@ services:
       - NODE_ID=${NODE_ID}
     volumes:
       - ./credentials.json:/root/.config/playactor/credentials.json
-      - /playstation2mqtt/configs:/configs
+      - ./configs:/playstation2mqtt/configs
     stdin_open: true
