--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,5 +19,8 @@ services:
       - NODE_ID=${NODE_ID}
     volumes:
       - ./credentials.json:/root/.config/playactor/credentials.json
-      - ./configs:/playstation2mqtt/configs
+      - playstation2mqtt-data:/playstation2mqtt/configs
     stdin_open: true
+
+volumes:
+  playstation2mqtt-data:
